# cpp-emulate-cpu

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
6520Lib/: CMakeLists.txt
6520Test/: CMakeLists.txt
6520Test/src/: main_6502.cpp
_notes/: 6502.md  gtest.md
src/: 6502Tests.cpp  main_6502.cpp  main_6502.h  test_main.cpp
